# mondaydotcom-utils

./: .gitignore  .pylintrc  README.md  project.cue  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint-and-test.yaml
cue.mod/: module.cue
mondaydotcom_utils/: __init__.py  formatted_value.py  graphql.py  time_block.py  utilities.py
scripts/: clean.cmd  clean.sh  lint.cmd  lint.sh  test.cmd  test.sh
src/: MondayCom_FormattedValue.py  MondayCom_Time.py  MondayCom_Utils.py
tests/: __init__.py  test_board_formatter.py  test_mondaydotcom_utils.py  test_single_item_formatter.py
tests/resources/: test_board.json  test_board_col_defs.json
