[tool.poetry]
name = "mondaydotcom-utils"
version = "0.2"
description = "A collection of Monday.com utilities"
authors = ["Center for Health AI <cuhealthai-softwareengineering@cuanschutz.edu>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
monday = "^1.3.0"
pandas = "^1.4.2"
python-box = "^6.0.2"
types-python-dateutil = "^2.8.12"
pytest = "^7.1.2"
gql = {extras = ["all"], version = "^3.2.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
vulture = "^2.3"
bandit = "^1.7.4"
isort = "^5.10.1"
black = "^22.3.0"
safety = "^1.10.3"
mypy = "^0.942"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 100
