[metadata]
name = mondaydotcom-utils
version = 0.0.1
author = Center for Health AI
author_email = cuhealthai-softwareengineering@cuanschutz.edu
description = A collection of Monday.com utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CUHealthAI/mondaydotcom-utils
project_urls =
    Bug Tracker = https://github.com/CUHealthAI/mondaydotcom-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    monday >= 1.2.9

[options.packages.find]
where = src
